--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "SMM",
   "license": "ISC",
   "dependencies": {
-    "grunt": "^1.0.1"
+    "grunt": "^1.0.1",
+    "grunt-contrib-compass": "^1.1.1",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
